# video-compositing-renderer

./: .clangd  JOURNAL.md  Pipfile  README.md  pyproject.toml  setup.py  tasks.py
c/: ProgrammingQueue.c  _libvcr.c  display.c  engine.c  engine.h  programming_queue.c  rundev.c  spacetime.c  vcr_assets.h  vcr_programming_queue.h  video_player.h
src/vcr/: __init__.py  __main__.py  libvcr.py
tests/unit/: test_libvcr.py  test_main.py
